--- a/label-admin-parent/label-admin-web/src/main/resources/application.yml
+++ b/label-admin-parent/label-admin-web/src/main/resources/application.yml
@@ -14,7 +14,7 @@ swagger:
 #mybatis plus 设置
 mybatis-plus:
   mapper-locations: classpath*:com/laofeizhu/admin/modules/**/xml/*Mapper.xml
-  typeEnumsPackage: com.laofeizhu.oms.modules.*.enums
+  typeEnumsPackage: com.laofeizhu.admin.modules.*.enums
 cos:
   secretId: AKIDHNDn8D06h27wWoFb7NWP3f291eIweUR9
   secretKey: cz8QSIvOfgU3TeZMtXw5yc2EDxTjowoP
