--- a/label-admin-parent/label-admin-web/src/main/resources/jeecg/jeecg_config.properties
+++ b/label-admin-parent/label-admin-web/src/main/resources/jeecg/jeecg_config.properties
@@ -25,6 +25,6 @@ db_filed_convert=true
 #page Search Field num [User defined]
 page_search_filed_num=1
 #page_filter_fields
-page_filter_fields=create_time,create_by,update_time,updated_by
+page_filter_fields=create_time,create_by,update_time,update_by
 
 
