--- a/label-parser/pom.xml
+++ b/label-parser/pom.xml
@@ -46,6 +46,26 @@
     </dependencies>
     <repositories>
         <repository>
+            <id>public</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>https://maven.aliyun.com/repository/central</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>spring</id>
             <url>https://maven.aliyun.com/repository/spring</url>
             <releases>
