--- a/label-service/src/main/resources/application.yml
+++ b/label-service/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   datasource:
     name: label_service
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/label_service?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/label_service?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: 88105156
     type: com.alibaba.druid.pool.DruidDataSource
 mybatis-plus:
   #默认扫描mapper.xml的目录
