config(*):add dev config

--- a/label-service/src/main/resources/application.yml
+++ b/label-service/src/main/resources/application.yml
@@ -1,13 +1,8 @@
 server:
   port: 9981
 spring:
-  datasource:
-    name: label_service
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/label_service?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 88105156
-    type: com.alibaba.druid.pool.DruidDataSource
+  profiles:
+    active: local
 mybatis-plus:
   #默认扫描mapper.xml的目录
   mapper-locations: classpath*:/mapper/**/*.xml
