--- a/label-admin-parent/label-admin-web/src/main/resources/application-dev.yml
+++ b/label-admin-parent/label-admin-web/src/main/resources/application-dev.yml
@@ -85,14 +85,14 @@ spring:
         connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/label_service?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+          url: jdbc:mysql://127.0.0.1:33060/label_service?characterEncoding=UTF-8&useUnicode=true&useSSL=false
           username: root
-          password:
+          password: 74aCi6UyvvS7qvdL
           driver-class-name: com.mysql.jdbc.Driver
   #redis 配置
   redis:
     database: 0
-    host: 129.204.159.104
+    host: 127.0.0.1
     lettuce:
       pool:
         max-active: 8   #最大连接数据库连接数,设 0 为没有限制
@@ -100,7 +100,7 @@ spring:
         max-wait: -1ms  #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
         min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
       shutdown-timeout: 100ms
-    password: 88105156
+    password:
     port: 6379
 
 oms :
